# fom-emulator

./: .gitignore  AGENTS.md  AddressMap.md  AddressMap_FoTD.md  Protocol_AddressWatch_FoTD.md  README.md  ServerEmulator_Findings.md  build_hook.bat  build_hookinjector.bat  launch_fom.bat  launch_fom_with_log.bat  launch_with_log.bat  start_client.bat  start_client_world.bat  start_fom_tools.bat  start_server.bat  start_world.bat
Client/: fom_client.exe_20251228213858.id2  fom_client.exe_20251228213858.nam
Client/Client_FoM/: fom_hook.ini  master.cfg
Client/Client_TS/: README.md  package-lock.json  package.json  tsconfig.json
Docs/: Login_0x80_Payload_Report.md  Protocol_AddressWatch.md  RakNet_LithTech_DeepDive.md  ServerEmulator_Findings.md
Docs/AddressMaps/: AddressMap.md  AddressMap_Object_lto.md
Docs/Appearance/: Appearance_Assets.md  Appearance_FaceHair.csv  Appearance_ItemTemplate.csv
Docs/Exports/: CRes_strings.csv  SkillsTable.csv  armors.csv  armors_override.csv  armors_override_notes.txt  boosters.csv  implants.csv  item_base_stats_raw.csv  item_stats_client_base.csv  item_stats_client_display.csv  item_stats_client_display_variants.csv  item_templates_raw.csv  item_variants_raw_from_unk_102DD0F8.csv  medications.csv  object_lto_item_map.csv  object_lto_item_map_enriched.csv  object_lto_missing_items.csv  weapons.csv
Docs/ItemCatalog/: CRes_728064_items.csv
Docs/Logs/: Emulator.md  FoM Reverse Engineering.md  FoTD_Emulator.md  LithTech_API.md  RakNet3.5_API.md
Docs/Notes/: AGENTS-20251228-160855.diff.txt  AGENTS-20251228-160855.md  AGENTS-20251228-160855.sha256.txt  AGENTS_20251224-202314.md  AGENTS_20251224-202314.sha256.txt  AGENTS_20251228-150643.md  AGENTS_20251228-150643.sha256.txt  AGENTS_20251228-150901.md  AGENTS_20251228-150901.sha256.txt  AGENTS_20251228-152840.md  AGENTS_20251228-152840.sha256.txt  AGENTS_20251228-152957.md  AGENTS_20251228-152957.sha256.txt  AGENTS_20251228-153607.md  AGENTS_20251228-153607.sha256.txt  AGENTS_20251228-153657.md  AGENTS_20251228-153657.sha256.txt  AGENTS_20251228-185857.md  AGENTS_20251228-185857.sha256.txt  AGENTS_20251228-195853.md  AGENTS_20251228-195853.sha256  AGENTS_20251228-230305.md  AGENTS_20251228-230305.sha256.txt  AGENTS_20251229-044302.md  AGENTS_20251229-044302.sha256.txt  AGENTS_change_log.md  AGENTS_diff_20251224-202403.txt  AGENTS_diff_20251228-150656.txt  AGENTS_diff_20251228-150912.txt  AGENTS_diff_20251228-152855.txt  AGENTS_diff_20251228-153016.txt  AGENTS_diff_20251228-153619.txt  AGENTS_diff_20251228-153711.txt  AGENTS_diff_20251228-185857.txt  AGENTS_diff_20251228-230305.txt  AGENTS_diff_20251229-044302.txt  BitOrder.md  CShell_Gameplay_Packets.md  CUDPDriver.md  ClientNetworking.md  (+24 more)
Docs/Packets/: ID_CONNECTION_REQUEST.md  ID_CONNECTION_REQUEST_ACCEPTED.md  ID_LOGIN.md  ID_LOGIN_REQUEST.md  ID_LOGIN_REQUEST_RETURN.md  ID_LOGIN_RETURN.md  ID_LOGIN_TOKEN_CHECK.md  ID_NEW_INCOMING_CONNECTION.md  ID_PACKET_107.md  ID_REGISTER_CLIENT.md  ID_WORLD_LOGIN.md  ID_WORLD_LOGIN_DATA.md  ID_WORLD_LOGIN_RETURN.md  ID_WORLD_SELECT.md  MSG_ID_79_WORLD_LOGIN_DATA.md  README.md
Docs/Plans/: ServerEmulator_Cleanup_Testing_Plan.md
Docs/Projects/: Emulator.md  FoMServer.md  FoTD_Emulator.md  LithTech_API.md  RakNet3.5_API.md
Docs/Specs/: FoTD_Emulator.md  RakNet3.5_API.md
Docs/tools/: raknet_decrypt.py
FoTD/: fom_client.exe.id2  fom_client.exe.nam  fom_client.exe_20251228213858.til
FoTD/Resources/: CRes.dll.i64
Hook/: CMakeLists.txt  GenerateProjectFiles.bat  TrimSolution.ps1
Hook/Source/: HookBits.h  HookCommon.h  HookConfig.cpp  HookConfig.h  HookD3D9.cpp  HookD3D9.h  HookDecode.h  HookDetours.cpp  HookDetours.h  HookFoMProtocol.cpp  HookFoMProtocol.h  HookItemOverrides.cpp  HookItemOverrides.h  HookItemTemplateDump.h  HookLithTech.cpp  HookLithTech.h  HookLogging.cpp  HookMain.cpp  HookRakNet.cpp  HookSharedMem.h  HookState.h  HookWinsock.h
Hook/Source/ProxyD3D9/: D3D9Proxy.cpp
Hook/Source/ProxyDInput8/: DInput8Proxy.cpp  DInput8Proxy.def
HookInjector/: CMakeCache.txt  CMakeLists.txt  FoMHook.sln  FoMHook.vcxproj  FoMHook.vcxproj.filters  GenerateProjectFiles.bat  WriteRootSolution.ps1  cmake_install.cmake  fom_hook.cpp  injector.cpp
HookInjector/Source/: HookCommon.h  HookConfig.cpp  HookConfig.h  HookD3D9.cpp  HookDecode.cpp  HookDetours.cpp  HookFoMProtocol.cpp  HookFoMProtocol.h  HookItemOverrides.cpp  HookItemTemplateDump.cpp  HookLogging.h  HookMain.cpp  HookMain.h  HookOverlay.cpp  HookOverlay.h  HookRakNet.cpp  HookRakNet.h  HookSharedMem.cpp  HookState.cpp  HookState.h  HookWinsock.cpp
HookInjector/Source/FoMInjector/: Injector.cpp  Injector.h
HookInjector/Source/ProxyD3D9/: D3D9Proxy.def
HookInjector/Source/ProxyDInput8/: DInput8Proxy.cpp
Open-FoMEdit/: dedit.ini  strings_out.rc  unrez.bat
Open-FoMEdit/AssetLists/: BuildAssetLists.pl  Readme.txt  createAssetLists.pl  processNewLogs.pl
Open-FoMEdit/Guide/: Adding and Modifying Weapons.htm  DEdit v2.htm  Documentation_Overview.htm  FXed_Reference.htm  NOLF2_AI.htm  NOLF2_AI_Gameplay_Setup.htm  NOLF2_Adding_Vehicles.htm  NOLF2_Building.htm  NOLF2_Commands.htm  NOLF2_ContentPacks_and_Modifications.htm  NOLF2_Demolition_Source.htm  NOLF2_PlayerMessages.htm  NOLF2_Working_with_models.htm  Nolf2_Demolition_Tutorial.htm  Nolf2_Level_Processing.htm  Player Movement.htm  Texture_Scripts_For_Artists.htm  Texture_Scripts_for_Engineers.htm  WinPacker.htm
Open-FoMEdit/MEL/: ltExport.mel
Open-FoMEdit/Plugins/: MaxDTXLoader30.bmi  MaxDTXLoader40.bmi  MaxModelExport30.dle  MaxModelExport40.dle  MaxWorldExport30.dle  MaxWorldExport40.dle  MaxWorldImport30.dli  MaxWorldImport40.dli  MayaModelExport30.mll  (+3 more)
Open-FoMTools/: README.md  app.py  fom_dat_dump.py  fom_dat_tool.py  fom_dtx_to_png.py  ltb_exporter.py  ltb_to_lta.md  ltb_to_lta.py  obj_triangulate_gltf.py
Server/: AGENTS.md  package.json  tsconfig.json
Server/Master_TS/native/: CMakeLists.txt
ServerEmulator/: .eslintrc.cjs  .prettierignore  README.md  fom_server.ini  package-lock.json  package.json  test_client.ts
catalog/: CRes_728064_categories.csv
(+111 files in other folders)
